ТЕПЕРЬ КУРЬЕРУ УДОБНЕЕ ДОКАЗЫВАТЬ КУРАТОРУ ЧТО ОН НЕ КИНУЛ ШОП МОЖНО КРУЖОК МОЖНО ФОТКОЙ С КООРДИНАТАМИ
